# SuperCold

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  lines.py
Tests/: test.cpp
documentation/: Doxyfile
documentation/html/: _bullet_8cpp.html  _bullet_8hpp.html  _bullet_8hpp.js  _bullet_8hpp_source.html  _eye_enemy_8cpp.html  _eye_enemy_8hpp.html  _eye_enemy_8hpp.js  _eye_enemy_8hpp_source.html  _game_8cpp.html  _game_8hpp.html  _game_8hpp_source.html  _game_object_8cpp.html  _game_object_8hpp.html  _game_object_8hpp_source.html  _player_8cpp.html  _player_8hpp.html  _player_8hpp_source.html  _priority_queue_8hpp.html  _priority_queue_8hpp.js  _priority_queue_8hpp_source.html  _settings_manager_8cpp.html  _settings_manager_8hpp.html  _settings_manager_8hpp.js  _settings_manager_8hpp_source.html  _simplex_noise_8cpp.html  _simplex_noise_8hpp.html  _simplex_noise_8hpp.js  _simplex_noise_8hpp_source.html  _sprite_controller_8cpp.html  _sprite_controller_8hpp.html  _sprite_controller_8hpp.js  _sprite_controller_8hpp_source.html  _tile_map_8cpp.html  _tile_map_8hpp.html  _tile_map_8hpp.js  _tile_map_8hpp_source.html  annotated.html  annotated_dup.js  class_bullet-members.html  class_bullet.html  (+454 more)
documentation/latex/: _bullet_8cpp.tex  _bullet_8hpp.tex  _bullet_8hpp_source.tex  _eye_enemy_8cpp.tex  _eye_enemy_8hpp.tex  _eye_enemy_8hpp_source.tex  _game_8cpp.tex  _game_8hpp.tex  _game_8hpp_source.tex  _game_object_8cpp.tex  _game_object_8hpp.tex  (+304 more)
include/: Game.hpp  GameObject.hpp
src/: Game.cpp  GameObject.cpp  main.cpp  settings.hpp  settings.toml
(+573 files in other folders)
